# smartlowpicker_server

./: .gitignore  README.md  demo.py  main.py  pyproject.toml
app/: __init__.py
app/routes/: boards_info.py  main.py  stocks_analyse.py  stocks_info.py
app/templates/: index.html
